force-app/main/default/objects/Account/fields/Account_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Auto_Number__c</fullName>
    <description>The auto generated account number relative to the household. This field can also be used as a unique ID for external systems.</description>
    <displayFormat>{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Account Auto-Number</label>
    <type>AutoNumber</type>
</CustomField>