force-app/main/default/objects/Account/fields/Account_Source_API__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_API__c</fullName>
    <description>Only used for background processes not intended to be exposed on page layouts.</description>
    <inlineHelpText>Where did the account got inserted from: Quick Create CDI, User etc</inlineHelpText>
    <label>Account Source API</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Quick Create CDI</fullName>
            </value>
            <value>
                <fullName>Smart Account Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>