force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>IMAGE(  CASE( 
Status__c , &quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;,&quot;Yellow&quot;,&quot;/img/samples/flag_yellow.gif&quot;,&quot;/s.gif&quot;)  , &quot;Accounts Status Flag&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>