force-app/main/default/objects/Account/fields/Active_Contract_Exception__c.field-meta.xml
<CustomField>
    <fullName>Active_Contract_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Request a Contract Exception</inlineHelpText>
    <label>Active Contract Exception</label>
    <type>Checkbox</type>
</CustomField>