force-app/main/default/objects/Account/fields/Active_Contract_Exception_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Contract_Exception_Status__c</fullName>
    <inlineHelpText>Approval for Exception Processing of Orders</inlineHelpText>
    <label>Active Contract Exception Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>