force-app/main/default/objects/Account/fields/Add_Roster__c.field-meta.xml
<CustomField>
    <fullName>Add_Roster__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Yes, Invoice Delivery Method must be Email or Portal.</inlineHelpText>
    <label>Add Roster</label>
    <type>Checkbox</type>
</CustomField>