force-app/main/default/objects/Account/fields/Agreement_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Coverage__c</fullName>
    <label>Agreement Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National Training Contract</fullName>
            </value>
            <value>
                <fullName>Regional Training Contract</fullName>
            </value>
            <value>
                <fullName>Hybrid Training Contract</fullName>
            </value>
            <value>
                <fullName>Memorandum of Understanding (MOU)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>