force-app/main/default/objects/Account/fields/Agreement_Coverage_Flag__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Coverage_Flag__c</fullName>
    <formula>IMAGE(
CASE(Agreement_Coverage__c ,
&quot;National Training Contract&quot;, &quot;/servlet/servlet.FileDownload?file=015d00000005ykQ&quot;,
&quot;Regional Training Contract&quot;, &quot;/servlet/servlet.FileDownload?file=015d00000005ykR&quot;,
&quot;Hybrid Training Contract&quot;, &quot;/servlet/servlet.FileDownload?file=015d00000005ykR&quot;,
&quot;/s.gif&quot;),
TEXT(Agreement_Coverage__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Coverage Flag</label>
    <type>Text</type>
</CustomField>