force-app/main/default/objects/Account/fields/AP_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>AP_Territory_Owner__c</fullName>
    <formula>AP_Territory__r.Owner:User.FirstName&amp;&quot; &quot;&amp;AP_Territory__r.Owner:User.LastName</formula>
    <label>AP Territory Owner</label>
    <type>Text</type>
</CustomField>