force-app/main/default/objects/Account/fields/Approved_Learn_to_Swim_Facility__c.field-meta.xml
<CustomField>
    <fullName>Approved_Learn_to_Swim_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicator for Organizations that are approved for Learn to Swim classes.</inlineHelpText>
    <label>Approved Learn to Swim Facility</label>
    <type>Checkbox</type>
</CustomField>