force-app/main/default/objects/Account/fields/Approved_to_Post_HAVE_A_FEE_courses__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Post_HAVE_A_FEE_courses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved to Post HAVE A FEE courses</label>
    <type>Checkbox</type>
</CustomField>