force-app/main/default/objects/Account/fields/Approved_to_Post_NO_FEE_courses_RCO_LTP__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Post_NO_FEE_courses_RCO_LTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved to Post NO FEE courses RCO/LTP</label>
    <type>Checkbox</type>
</CustomField>