force-app/main/default/objects/Account/fields/AQ_Territory__c.field-meta.xml
<CustomField>
    <fullName>AQ_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AQ Territory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Territory__c.Territory_Type__c</field>
            <operation>equals</operation>
            <value>AQ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>AQ Accounts</relationshipLabel>
    <relationshipName>AQ_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>