force-app/main/default/objects/Account/fields/AQ_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>AQ_Territory_Owner__c</fullName>
    <formula>AQ_Territory__r.Owner:User.FirstName&amp;&quot; &quot;&amp; AQ_Territory__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AQ Territory Owner</label>
    <type>Text</type>
</CustomField>