force-app/main/default/objects/Account/fields/AR_0_30_Days__c.field-meta.xml
<CustomField>
    <fullName>AR_0_30_Days__c</fullName>
    <formula>REPORT_AR_0_30_Days__c</formula>
    <label>AR 1-30 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>