force-app/main/default/objects/Account/fields/AR_121_180_Days__c.field-meta.xml
<CustomField>
    <fullName>AR_121_180_Days__c</fullName>
    <formula>REPORT_AR_121_180_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR 121-180 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>