force-app/main/default/objects/Account/fields/AR_180_Days__c.field-meta.xml
<CustomField>
    <fullName>AR_180_Days__c</fullName>
    <formula>REPORT_AR_180_Days__c</formula>
    <label>AR &gt;180 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>