force-app/main/default/objects/Account/fields/AR_Last_Report__c.field-meta.xml
<CustomField>
    <fullName>AR_Last_Report__c</fullName>
    <formula>REPORT_AR_Last_Report__c</formula>
    <inlineHelpText>Report is generated monthly and displays AR for previous month. Saba/LMS Code on Account must match Saba Org ID exactly for AR data to populate.</inlineHelpText>
    <label>AR as of</label>
    <type>DateTime</type>
</CustomField>