force-app/main/default/objects/Account/fields/Assigned_SCC__c.field-meta.xml
<CustomField>
    <fullName>Assigned_SCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned SCC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>