force-app/main/default/objects/Account/fields/Bankruptcy_Date__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Date__c</fullName>
    <label>Bankruptcy Date</label>
    <type>Date</type>
</CustomField>