force-app/main/default/objects/Account/fields/BGST_Rating__c.field-meta.xml
<CustomField>
    <fullName>BGST_Rating__c</fullName>
    <description>Rating fiedl used for BGST Profile</description>
    <label>BGST Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>