force-app/main/default/objects/Account/fields/BI_City__c.field-meta.xml
<CustomField>
    <fullName>BI_City__c</fullName>
    <label>BI City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>