force-app/main/default/objects/Account/fields/BI_Phone__c.field-meta.xml
<CustomField>
    <fullName>BI_Phone__c</fullName>
    <label>BI Phone</label>
    <type>Phone</type>
</CustomField>