force-app/main/default/objects/Account/fields/BI_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>BI_Postal_Code__c</fullName>
    <label>BI Postal Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>