force-app/main/default/objects/Account/fields/BI_Postal_Code_Plus_4__c.field-meta.xml
<CustomField>
    <fullName>BI_Postal_Code_Plus_4__c</fullName>
    <label>BI Postal Code Plus 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>