force-app/main/default/objects/Account/fields/BI_State__c.field-meta.xml
<CustomField>
    <fullName>BI_State__c</fullName>
    <label>BI State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>