force-app/main/default/objects/Account/fields/BI_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>BI_Street_Address__c</fullName>
    <label>BI Street Address</label>
    <type>TextArea</type>
</CustomField>