force-app/main/default/objects/Account/fields/Billing_Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_email__c</fullName>
    <formula>Billing_Contact__r.Email</formula>
    <label>Billing Contact email</label>
    <type>Text</type>
</CustomField>