force-app/main/default/objects/Account/fields/Billing_Contact_extension__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_extension__c</fullName>
    <description>Field added to Accounts for mail merge purposes</description>
    <formula>Billing_Contact__r.Extension__c</formula>
    <label>Billing Contact extension</label>
    <type>Text</type>
</CustomField>