force-app/main/default/objects/Account/fields/Billing_Contact_phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_phone__c</fullName>
    <formula>Billing_Contact__r.Phone</formula>
    <label>Billing Contact phone</label>
    <type>Text</type>
</CustomField>