force-app/main/default/objects/Account/fields/Billing_Street_Custom__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Custom__c</fullName>
    <formula>SUBSTITUTE(BillingStreet ,SUBSTITUTE($Label.linebreak, &quot;-&quot;, &quot;&quot;),&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Street Custom</label>
    <type>Text</type>
</CustomField>