force-app/main/default/objects/Account/fields/Block_Certificate_Export_to_AWS__c.field-meta.xml
<CustomField>
    <fullName>Block_Certificate_Export_to_AWS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check (set true) is certificates for this account are NOT to be exported to AWS.</description>
    <label>Block Certificate Export to AWS</label>
    <type>Checkbox</type>
</CustomField>