force-app/main/default/objects/Account/fields/CFS_Account_Number_1__c.field-meta.xml
<CustomField>
    <fullName>CFS_Account_Number_1__c</fullName>
    <label>CFS Account Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>