force-app/main/default/objects/Account/fields/CFS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CFS_Account_Number__c</fullName>
    <displayFormat>SF{00000000}</displayFormat>
    <label>SalesForce Account Number</label>
    <type>AutoNumber</type>
</CustomField>