force-app/main/default/objects/Account/fields/Collections_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Collections_Termination_Date__c</fullName>
    <formula>REPORT_Collections_Termination_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collections Termination Date</label>
    <type>Date</type>
</CustomField>