force-app/main/default/objects/Account/fields/Consolidate_Period_Fulfillments__c.field-meta.xml
<CustomField>
    <fullName>Consolidate_Period_Fulfillments__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If multiple transactions occur in the same invoice cycle they will appear on the same invoice.</inlineHelpText>
    <label>Consolidate Transactions</label>
    <type>Checkbox</type>
</CustomField>