force-app/main/default/objects/Account/fields/Copy_Billing_to_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Copy_Billing_to_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will run a formula that copies all of the Billing Address information to the Shipping Address Fields.</description>
    <label>Copy Billing to Shipping</label>
    <type>Checkbox</type>
</CustomField>