force-app/main/default/objects/Account/fields/Coupon_1_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Coupon_1_Expiration__c</fullName>
    <label>Coupon 1 Expiration</label>
    <type>Date</type>
</CustomField>