force-app/main/default/objects/Account/fields/Coupon_2_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Coupon_2_Expiration__c</fullName>
    <label>Coupon 2 Expiration</label>
    <type>Date</type>
</CustomField>