force-app/main/default/objects/Account/fields/Coupon_3_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Coupon_3_Expiration__c</fullName>
    <label>Coupon 3 Expiration</label>
    <type>Date</type>
</CustomField>