force-app/main/default/objects/Account/fields/Coupon_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code_3__c</fullName>
    <label>Coupon Code 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>