force-app/main/default/objects/Account/fields/Credit_Available__c.field-meta.xml
<CustomField>
    <fullName>Credit_Available__c</fullName>
    <description>Available Credit for purchases</description>
    <formula>Credit_Limit__c - Total_AR__c - Open_Order_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Credit Available = Credit Limit – (Open Orders + Total AR)</inlineHelpText>
    <label>Credit Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>