force-app/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <description>Authorized Credit Extension for Customer</description>
    <inlineHelpText>Amount of credit extended to a customer for invoicing purposes. Automatically defaulted to $10,000 when the Prefered Payment Method is set to Invoice or $0 if the Prefered Payment method is set to Credit Card. Once saved, you may updated the credit limit.</inlineHelpText>
    <label>Credit Limit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>