force-app/main/default/objects/Account/fields/Customer_has_AEDs__c.field-meta.xml
<CustomField>
    <fullName>Customer_has_AEDs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer has AEDs</label>
    <type>Checkbox</type>
</CustomField>