force-app/main/default/objects/Account/fields/Customer_PO_Required_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Required_on_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if customer requires their PO to be referenced on the invoice.</inlineHelpText>
    <label>Customer PO Required on Invoice</label>
    <type>Checkbox</type>
</CustomField>