force-app/main/default/objects/Account/fields/Details_of_Agreement_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Agreement_Coverage__c</fullName>
    <label>Details of Agreement Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>