force-app/main/default/objects/Account/fields/Fiscal_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Cycle__c</fullName>
    <label>Fiscal Cycle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>