force-app/main/default/objects/Account/fields/Flagged_For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Flagged_For_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flagged For Deletion</label>
    <type>Checkbox</type>
</CustomField>