force-app/main/default/objects/Account/fields/Force_Approve__c.field-meta.xml
<CustomField>
    <fullName>Force_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Approve</label>
    <type>Checkbox</type>
</CustomField>