force-app/main/default/objects/Account/fields/FS_Territory__c.field-meta.xml
<CustomField>
    <fullName>FS_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FS Territory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Territory__c.Territory_Type__c</field>
            <operation>equals</operation>
            <value>FS, HY</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>FS Accounts</relationshipLabel>
    <relationshipName>FS_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>