force-app/main/default/objects/Account/fields/FS_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>FS_Territory_Owner__c</fullName>
    <formula>FS_Territory__r.Owner:User.FirstName&amp;&quot; &quot;&amp;FS_Territory__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FS Territory Owner</label>
    <type>Text</type>
</CustomField>