force-app/main/default/objects/Account/fields/FY17Assigned__c.field-meta.xml
<CustomField>
    <fullName>FY17Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FY17Assigned</label>
    <type>Checkbox</type>
</CustomField>